Added more analysis description of plots

--- a/02-Case-Assignment/visualizations/cloud.html
+++ b/02-Case-Assignment/visualizations/cloud.html
@@ -59,7 +59,7 @@
             <hr/>
             <img src="../Resources/assets/images/Fig3.png" alt="fig1" class="w-100 float-start">
 
-            <p>The purpose of this project was to analyze weather changes as you get closer to the equator. to accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+            <p> The cloudiness visualization shows that there is no relantionship between cloudiness and latitude. Cloudiness seems to be scattered across the chart, showing no patter or ralationship with latitude. However, the plot clearly shows cloudiness rate is never below 0 percent as we go up the latitude. </p>
             
          </article>
         </div>
