--- a/02-Case-Assignment/visualizations/humidity.html
+++ b/02-Case-Assignment/visualizations/humidity.html
@@ -59,7 +59,7 @@
             <hr/>
             <img src="../Resources/assets/images/Fig2.png" alt="fig1" class="w-100 float-start">
 
-            <p>The purpose of this project was to analyze weather changes as you get closer to the equator. to accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+            <p>Similar to cloudiness, there is no patter between humidity and latitude. Although, majority of the values are scattered on the upper part of the plot, there is no definied relationship. However, in comparison, the humidity visualization seems to be the opposite of the cloudiness in a sense of the direction of scatter. </p>
             
          </article>
         </div>
