--- a/02-Case-Assignment/visualizations/temp.html
+++ b/02-Case-Assignment/visualizations/temp.html
@@ -59,7 +59,7 @@
             <hr/>
             <img src="../Resources/assets/images/Fig1.png" alt="fig1" class="w-100 float-start">
 
-            <p>The purpose of this project was to analyze weather changes as you get closer to the equator. to accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+            <p>The Max Temperature plot shows that there is an inverse relationship between maximum temprature and latitude. The temprature tends to lower as you get closer to the equator. This is indicated with a strong downward trends between Maximum temprature and latitude. </p>
             
          </article>
         </div>
