--- a/02-Case-Assignment/visualizations/wind.html
+++ b/02-Case-Assignment/visualizations/wind.html
@@ -59,7 +59,7 @@
             <hr/>
             <img src="../Resources/assets/images/Fig4.png" alt="fig1" class="w-100 float-start">
 
-            <p>The purpose of this project was to analyze weather changes as you get closer to the equator. to accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+            <p> This analysis is similar to cloudiness pattern, except the wind speed visualization is more condensed at a lower rate. However, the scatter plot shows no pattern or relationship between wind speed and Latitude. The plot indicates the wind speed tend to be at a constant lower rate as we move up the latitude. </p>
             
          </article>
         </div>
